--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: List-Parseable
-version: 1.04
+version: 1.05
 author:
   - 'Sullivan Beck <sbeck@cpan.org>'
 abstract: routines to work with lists containing a simple language
@@ -13,12 +13,14 @@ requires:
   Text::Balanced: 0
   perl: 5.6.0
 build_requires:
+  Data::Dumper: 0
+  IO::File: 0
   Test::More: 0
 provides:
   List::Parseable:
     file: lib/List/Parseable.pm
-    version: 1.04
-generated_by: Module::Build version 0.2808
+    version: 1.05
+generated_by: Module::Build version 0.280801
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
   version: 1.2
