Import of SBECK/List-Parseable-1.06 from CPAN.
gitpan-cpan-distribution: List-Parseable
gitpan-cpan-version:      1.06
gitpan-cpan-path:         SBECK/List-Parseable-1.06.tar.gz
gitpan-cpan-author:       SBECK
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,26 +1,26 @@
 ---
-name: List-Parseable
-version: 1.05
+abstract: 'routines to work with lists containing a simple language'
 author:
   - 'Sullivan Beck <sbeck@cpan.org>'
-abstract: routines to work with lists containing a simple language
-license: perl
-resources:
-  license: http://dev.perl.org/licenses/
-requires:
-  Sort::DataTypes: 0
-  Storable: 0
-  Text::Balanced: 0
-  perl: 5.6.0
 build_requires:
-  Data::Dumper: 0
-  IO::File: 0
-  Test::More: 0
+  Test::Inter: 0
+configure_requires:
+  Module::Build: 0.36
+generated_by: 'Module::Build version 0.3603'
+license: perl
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: List-Parseable
 provides:
   List::Parseable:
     file: lib/List/Parseable.pm
-    version: 1.05
-generated_by: Module::Build version 0.280801
-meta-spec:
-  url: http://module-build.sourceforge.net/META-spec-v1.2.html
-  version: 1.2
+    version: 1.06
+requires:
+  Sort::DataTypes: 3.00
+  Storable: 0
+  Text::Balanced: 0
+  perl: 5.000
+resources:
+  license: http://dev.perl.org/licenses/
+version: 1.06
